unrelated: fix <dl> overflow issues

--- a/src/static/site.css
+++ b/src/static/site.css
@@ -41,18 +41,19 @@ strong>span+label {
 
 dl.custom-dl {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: fit-content(14rem) minmax(0, 1fr);
     gap: 0.5rem 0;
     background: #fcfcfc;
     padding: 20px;
-    border-radius: 8px;
-    border: 1px solid #ccc;
     border-radius: 5px;
+    border: 1px solid #ccc;
 
     dt,
     dd {
         padding-bottom: 0.5rem;
         border-bottom: 1px solid #ccc;
+        min-width: 0;
+        overflow-wrap: anywhere;
     }
 
     dt {
@@ -62,6 +63,5 @@ dl.custom-dl {
     dd {
         padding-left: 1rem;
         margin: 0;
-        /* Resets default browser indent */
     }
 }
